; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/extr_servo.c_servo_obj_print.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/extr_servo.c_servo_obj_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"<Servo %lu>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (void (i8*, i8*, ...)*, i8*, %struct.TYPE_4__*, i32)* @servo_obj_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @servo_obj_print(void (i8*, i8*, ...)* %0, i8* %1, %struct.TYPE_4__* %2, i32 %3) #0 {
  %5 = alloca void (i8*, i8*, ...)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__*, align 8
  store void (i8*, i8*, ...)* %0, void (i8*, i8*, ...)** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %9, align 8
  %11 = load i32, i32* %8, align 4
  %12 = load void (i8*, i8*, ...)*, void (i8*, i8*, ...)** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  call void (i8*, i8*, ...) %12(i8* %13, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %16)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
